Javadoc and small fixes.